# subwasm

./: .clippy.toml  .env-sample  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.adoc  README.md  README_src.adoc  TODO.adoc  deny.toml  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build-linux.yml  build-macos.yml  check.yml  daily-check.yml  gh-pages.yaml  quick-check.yml  release.yml  weekly-check.yml
Formula/: subwasm.rb  template.rb
cli/: Cargo.toml  LICENSE  README.md  build.rs
cli/src/: error.rs  main.rs  opts.rs  test.rs  utils.rs
cli/tests/: compress.rs  diff.rs  get.rs  info.rs  meta.rs  misc.rs  show.rs  test.rs  test_utils.rs
data/json/: rococo.json  substrate2.json  substrate_v12.json  test2.json  test_v12_full.json
doc/: demos.adoc  index.adoc  usage.adoc  usage_compress.adoc  usage_decompress.adoc  usage_diff.adoc  usage_get.adoc  usage_info.adoc  usage_meta.adoc  usage_show-reduced.adoc  usage_show.adoc  usage_version.adoc
lib/: Cargo.toml  README.md
lib/src/: chain_info.rs  chain_urls.rs  convert.rs  error.rs  github_ref.rs  lib.rs  macros.rs  metadata_wrapper.rs  module_wrapper.rs  runtime_info.rs  source.rs  subwasm.rs  types.rs  utils.rs
libs/ipfs-hasher/: Cargo.toml  README.md
libs/ipfs-hasher/src/: error.rs  lib.rs
libs/parity-releng/: Cargo.toml  README_src.adoc  justfile
libs/parity-releng/src/: error.rs  github_ref.rs  lib.rs  spec_version.rs
libs/rpc-client/: Cargo.toml  README.md
libs/rpc-client/src/: lib.rs  onchain_block.rs
libs/substrate-differ/: Cargo.toml  README.md
libs/substrate-differ/src/: call_wrapper.rs  differ.rs  differs.rs  error.rs  lib.rs  partial_differ.rs  raw_differ.rs
libs/substrate-differ/src/differs/: diff_method.rs  json_utils.rs  mod.rs  partial_differ.rs  raw.rs  raw_differ.rs  raw_differ_options.rs  reduced.rs  reduced_runtime.rs  summary_differ.rs  test_constants.rs  test_runtimes.rs  utils.rs
libs/substrate-differ/src/differs/raw/: change_counter.rs  change_type.rs  mod.rs  raw_differ.rs  skip_counter.rs
libs/substrate-differ/src/differs/reduced/: call.rs  change_type.rs  changed_wapper.rs  diff_analyzer.rs  diff_result.rs  diff_stats.rs  diff_trait.rs  mod.rs  pallet_data.rs  pallet_item.rs  prelude.rs  reduced_diff_result.rs  reduced_differ.rs  reduced_extrinsic.rs  reduced_pallet.rs  reduced_pallet_change.rs  reduced_pallet_change_wrapper.rs  reduced_runtime.rs  reduced_runtime_change_wrapper.rs  reduced_runtime_summary.rs  reduced_trait.rs  signature.rs
libs/substrate-differ/src/differs/reduced/call/: call.rs  constant.rs  error.rs  event.rs  hash.rs  mod.rs  prelude.rs  storage.rs
libs/substrate-differ/src/differs/reduced/calls/: call.rs  changes.rs  changes_comptible.rs  changes_require_txver_bump.rs  constant.rs  displayable_vec.rs  error.rs  event.rs  hashed_type.rs  mod.rs  prelude.rs  signature.rs  storage.rs
libs/substrate-differ/src/differs/reduced/diff_analyzer/: compatible.rs  mod.rs  require_tx_version_bump.rs
libs/substrate-differ/src/differs/reduced/diff_analyzer/traits/: compatible.rs  mod.rs  require_tx_version_bump.rs
libs/substrate-differ/src/differs/reduced/v13/: mod.rs  reduced_pallet.rs  reduced_runtime.rs
libs/substrate-differ/src/differs/reduced/v14/: mod.rs  reduced_runtime.rs
libs/substrate-differ/src/differs/summary/: mod.rs
libs/substrate-runtime-differ/: Cargo.toml
libs/substrate-runtime-differ/src/: lib.rs
libs/substrate-runtime-proposal-hash/: Cargo.toml  README.md
libs/substrate-runtime-proposal-hash/src/: error.rs  lib.rs
libs/wasm-loader/: Cargo.toml  README.md
libs/wasm-loader/src/: compression.rs  error.rs  lib.rs  node_endpoint.rs  onchain_block.rs  source.rs
libs/wasm-testbed/: Cargo.toml  readme.md
libs/wasm-testbed/src/: error.rs  lib.rs  logger_mock.rs
resources/: logo.fig
scripts/: build-doc.sh  fetch-some.py  fetch-wasm.sh  get.sh
scripts/demos/: demo-diff.sh  demo-get.sh  demo-info.sh  demo-meta.sh  demo-show.sh  env.sh  run-all.sh
scripts/demos/casts/: demo-diff.cast  demo-get.cast  demo-info.cast  demo-meta.cast  demo-show.cast
templates/: changelog.md  release.md
templates/diff/: diff.md.tera
