[workspace.package]
version = "1.0.0-alpha10"
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io>"]
edition = "2021"

[workspace]
resolver = "2"
members = [
	"cli",
	"lib",
	"libs/wasm-loader",
	"libs/wasm-testbed",
	"libs/substrate-runtime-proposal-hash",
	"libs/substrate-differ",
	"libs/ipfs-hasher",
]

# 59.31s
[profile.production]
inherits = "release"
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
