[package]
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io"]
description = "subwasm is a utility that works on WASM Runtime of Substrate based chains"
edition = "2021"
homepage = "https://github.com/chevdor/subwasm"
keywords = [
  "wasm",
  "cli",
  "substrate",
  "blockchain",
  "runtime",
  "polkadot",
  "kusama",
]
license = "MIT"
name = "subwasm"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"
version = "0.19.0"

[dependencies]
assert_cmd = "2.0"
clap = { version = "4.0", features = [
  "derive",
  "env",
  "unicode",
  "cargo",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
color-eyre = "0.6"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
substrate-runtime-proposal-hash = { version = "0.19.0", path = "../libs/substrate-runtime-proposal-hash", optional = true }
subwasmlib = { version = "0.19.0", path = "../lib" }
wasm-loader = { version = "0.19.0", path = "../libs/wasm-loader" }
wasm-testbed = { version = "0.19.0", path = "../libs/wasm-testbed" }

[dev-dependencies]
assert_cmd = "2.0"

[package.metadata.deb]
assets = [["target/release/subwasm", "usr/bin/", "755"]]
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
A cli utility to work with Substrate WASM Runtime."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"
