[package]
name = "subwasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "subwasm is a utility that works on WASM Runtime of Substrate based chains"
homepage = "https://github.com/chevdor/subwasm"
keywords = [
  "wasm",
  "cli",
  "substrate",
  "blockchain",
  "runtime",
  "polkadot",
  "kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[[bin]]
name = "subwasm"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.0"
clap = { version = "4.0", features = [
  "derive",
  "env",
  "unicode",
  "cargo",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
] }
color-eyre = "0.6"
env_logger = "0.10"
log = "0.4"
substrate-runtime-proposal-hash = { version = "1.0.0-alpha8", path = "../libs/substrate-runtime-proposal-hash", optional = true }
subwasmlib = { version = "1.0.0-alpha8", path = "../lib" }
wasm-loader = { version = "1.0.0-alpha8", path = "../libs/wasm-loader" }
wasm-testbed = { version = "1.0.0-alpha8", path = "../libs/wasm-testbed" }
serde_json = "1.0"
text-style = { version = "0.3", features = ["termion"] }
sp-runtime = { tag = "monthly-2023-05", git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
assert_cmd = "2.0"

[package.metadata.deb]
assets = [["target/release/subwasm", "usr/bin/", "755"]]
copyright = "2021-2022, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
A cli utility to work with Substrate WASM Runtime."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"
