[package]
name = "subwasmlib"
version.workspace = true
edition.workspace = true
authors.workspace = true

readme = "README.md"
license = "MIT"
homepage = "https://github.com/chevdor/subwasm"
repository = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]

[dependencies]
frame-metadata = { version = "15", package = "frame-metadata", features = [
	"v12",
	"v13",
	"v14",
	"std",
] }
log = "0.4"
hex = "0.4"
rand = "0.8"
calm_io = "0.1"
thiserror = "1.0"
num-format = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = [
	"derive",
] }
sp-version = { tag = "monthly-2023-05", git = "https://github.com/paritytech/substrate" }
ipfs-hasher = { version = "1.0.0-alpha8", path = "../libs/ipfs-hasher" }
wasm-loader = { version = "1.0.0-alpha8", path = "../libs/wasm-loader" }
wasm-testbed = { version = "1.0.0-alpha8", path = "../libs/wasm-testbed" }
substrate-differ = { version = "1.0.0-alpha8", path = "../libs/substrate-differ" }
