[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

license = "MIT"
name = "ipfs-hasher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-unixfs = "0.2"

[dev-dependencies]
wasm-loader = { version = "1.0.0-alpha6", path = "../wasm-loader" }
