[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

license = "MIT"
name = "ipfs-hasher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-unixfs = "0.2"
thiserror = "1.0"

[dev-dependencies]
wasm-loader = { version = "0.21.3", path = "../wasm-loader" }
