[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

license = "MIT"
name = "ipfs-hasher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-unixfs = "0.2"
thiserror = "2.0.11"

[dev-dependencies]
wasm-loader = { version = "0.21.3", path = "../wasm-loader" }
