[package]
name = "substrate-differ"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = { version = "15", package = "frame-metadata", features = [
    "v12",
    "v13",
    "v14",
    "std",
] }
log = "0.4"
num-format = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
treediff = { version = "4.0", features = [
    "with-serde-json",
    "with-rustc-serialize",
] }
wasm-testbed = { version = "1.0.0-alpha6", path = "../wasm-testbed" }
scale-info = { version = "2.1.2", default-features = false, features = [
    "derive",
    "std",
    "serde",
] }
document-features = { version = "0.2" }
comparable = { version = ">=0.5.3", features = ["derive", "serde"] }

[dev-dependencies]
wasm-loader = { version = "1.0.0-alpha6", path = "../wasm-loader" }

[features]
## The default feature currently hides feature that are deprecated
default = ["v14", "reduced"]

## v13 runtimes
v13 = []

## v14 runtimes
v14 = []

## Reduced differ
reduced = []

[package.metadata.docs.rs]
features = ["document-features"]
