[package]
name = "substrate-differ"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log = "0.4"
num-format = "0.4"
serde_json = "1.0"
document-features = { version = "0.2" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
comparable = { version = ">=0.5.3", features = ["derive", "serde"] }
wasm-testbed = { version = "0.21.0", path = "../wasm-testbed" }
scale-info = { version = "2.11.3", default-features = false, features = [
	"derive",
	"std",
	"serde",
] }
frame-metadata = { version = "16", package = "frame-metadata", features = [
	"std", "legacy"
] }

[dev-dependencies]
wasm-loader = { version = "0.21.0", path = "../wasm-loader" }

[features]
## The default feature currently excludes feature that are deprecated
default = ["v14", "reduced"]
deprecated = ["v12", "v13"]

## v12 runtimes
v12 = []

## v13 runtimes
v13 = []

## v14 runtimes
v14 = []

## Reduced differ
reduced = []

[package.metadata.docs.rs]
features = ["document-features"]
