[package]
name = "substrate-differ"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log = "0.4"
num-format = "0.4"
serde_json = "1.0"
document-features = { version = "0.2" }
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
comparable = { version = ">=0.5.3", features = ["derive", "serde"] }
wasm-testbed = { version = "0.21.3", path = "../wasm-testbed", optional = true }
scale-info = { version = "2.11.3", default-features = false, features = [
	"derive",
	"std",
	"serde",
] }
frame-metadata = { version = "18", package = "frame-metadata", features = [
	"std", "legacy"
] }
blake3 = "1.5"

[dev-dependencies]
wasm-loader = { version = "0.21.3", path = "../wasm-loader" }

[features]
## The default feature currently excludes feature that are deprecated
default = ["v14", "reduced", "runtimes"]
deprecated = ["v12", "v13"]

## Support loading runtimes (wasm files)
runtimes = ["wasm-testbed"]

## v12 runtimes
v12 = []

## v13 runtimes
v13 = []

## v14 runtimes
v14 = []

## Reduced differ
reduced = []

[package.metadata.docs.rs]
features = ["document-features"]
