[package]
name = "substrate-runtime-proposal-hash"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
blake2 = "0.10"
thiserror = "1.0"
codec = { version = "3.1", package = "parity-scale-codec" }
sp-core = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-io = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-wasm-interface = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
frame-metadata = { version = "16", package = "frame-metadata", features = [
	"std",
] }
