[package]
name = "wasm-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true

homepage = "https://github.com/chevdor/subwasm"
keywords = [
    "wasm",
    "cli",
    "substrate",
    "blockchain",
    "runtime",
    "polkadot",
    "kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
jsonrpsee = { version = ">=0.18", git = "https://github.com/paritytech/jsonrpsee", features = [
    "client",
] }
log = "0.4"
multibase = "0.9"
multihash = "0.18"
serde = { version = "1.0", features = ["derive"] }
sp-maybe-compressed-blob = { tag = "monthly-2023-01", git = "https://github.com/paritytech/substrate/" }
tokio = { version = "1.19", features = ["full"] }
