[package]
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2021"
homepage = "https://github.com/chevdor/subwasm"
keywords = [
    "wasm",
    "cli",
    "substrate",
    "blockchain",
    "runtime",
    "polkadot",
    "kusama",
]
license = "MIT"
name = "wasm-loader"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"
version = "0.19.2"

[dependencies]
array-bytes = { version = "6.1" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sp-maybe-compressed-blob = { tag = "monthly-2023-05", git = "https://github.com/paritytech/substrate/" }

# RPC components
serde_json = { version = "1.0" }
subrpcer = { version = "0.10" }
tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
ureq = { version = "2.6", features = ["json"] }
