[package]
name = "wasm-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true

homepage = "https://github.com/chevdor/subwasm"
keywords = [
    "wasm",
    "cli",
    "substrate",
    "blockchain",
    "runtime",
    "polkadot",
    "kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
log = "0.4"
thiserror = "1.0"
multibase = "0.9"
multihash = "0.18"
array-bytes = { version = "6.1" }
serde = { version = "1.0", features = ["derive"] }
sp-maybe-compressed-blob = { tag = "monthly-2023-05", git = "https://github.com/paritytech/substrate/" }

# RPC components
serde_json = { version = "1.0" }
subrpcer = { version = "0.10" }
tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
ureq = { version = "2.6", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
