[package]
name = "wasm-testbed"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
log = "0.4"
thiserror = "1.0"
wasm-loader = { version = "0.20.0", path = "../wasm-loader" }
substrate-runtime-proposal-hash = { version = "0.20.0", path = "../substrate-runtime-proposal-hash" }
sc-executor = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sc-executor-common = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
scale = { version = "3", package = "parity-scale-codec", default-features = false }
sp-core = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-io = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-state-machine = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-wasm-interface = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
sp-version = { branch = "master", git = "https://github.com/paritytech/polkadot-sdk" }
scale-info = { version = "2.1", default-features = false, features = [
	"derive",
] }
frame-metadata = { version = "16", package = "frame-metadata", features = [
	"std",
] }
