[package]
name = "wasm-testbed"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
log = "0.4"
thiserror = "1.0"
wasm-loader = { version = "0.21.3", path = "../wasm-loader" }
substrate-runtime-proposal-hash = { version = "0.21.3", path = "../substrate-runtime-proposal-hash" }
sc-executor = "0.40.0"
sc-executor-common = "0.35.0"
scale = { version = "3", package = "parity-scale-codec", default-features = false }
sp-core = "34.0.0"
sp-io = "38.0.0"
sp-runtime = "39.0.0"
sp-state-machine = "0.43.0"
sp-wasm-interface = "21.0.0"
sp-version = "37.0.0"
scale-info = { version = "2.11.3", default-features = false, features = [
	"derive",
] }
frame-metadata = { version = "16", package = "frame-metadata", features = [
	"std",
] }
