[package]
name = "wasm-testbed"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage = "https://github.com/chevdor/subwasm"
keywords = [
	"wasm",
	"cli",
	"substrate",
	"blockchain",
	"runtime",
	"polkadot",
	"kusama",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chevdor/subwasm"

[dependencies]
hex = "0.4"
log = "0.4"
thiserror = "2.0.11"
wasm-loader = { version = "0.21.3", path = "../wasm-loader" }
substrate-runtime-proposal-hash = { version = "0.21.3", path = "../substrate-runtime-proposal-hash" }
sc-executor = "0.41.0"
sc-executor-common = "0.36.0"
scale = { version = "3", package = "parity-scale-codec", default-features = false }
sp-core = "35.0.0"
sp-io = "39.0.0"
sp-runtime = "40.0.0"
sp-state-machine = "0.44.0"
sp-wasm-interface = "21.0.0"
sp-version = "38.0.0"
scale-info = { version = "2.11.3", default-features = false, features = [
	"derive",
] }
frame-metadata = { version = "18", package = "frame-metadata", features = [
	"std",
] }
